# sup-mvvm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  ChangeLog  README.md  README.rst  pom.xml
doc/: CMakeLists.txt  api_reference.rst  compound-item.rst  context.rst  features.rst  index.rst  installation.rst  main-components.md  main-components.rst  main_components.rst  overview.rst  quick-start.rst  quick_start.rst  session-item.rst  sessionmodel.rst  standard-items.rst  standard_items.rst
examples/: CMakeLists.txt
examples/celleditors/: CMakeLists.txt  README.md  main.cpp
examples/collidingmice/: CMakeLists.txt  README.md  main.cpp
examples/concurrentplot/: CMakeLists.txt  README.md  main.cpp
examples/customeditors/: CMakeLists.txt  README.md  main.cpp
examples/dragandmove/: CMakeLists.txt  README.md  main.cpp
examples/flatview/: CMakeLists.txt  README.md  main.cpp
examples/hello-world/: CMakeLists.txt  main.cpp
examples/lineseries/: CMakeLists.txt  README.md  main.cpp
examples/plotgraphs/: CMakeLists.txt  README.md  main.cpp
examples/saveloadproject/: CMakeLists.txt  README.md  main.cpp
examples/toy-psps-model/: CMakeLists.txt  main.cpp  toypspsitems.cpp  toypspsitems.h  toypspsmodel.cpp  toypspsmodel.h
source/libmvvm_model/: CMakeLists.txt
source/libmvvm_view/: CMakeLists.txt
test/: .clang-tidy  CMakeLists.txt
test/libtest-utils/: CMakeLists.txt
test/parasoft/: CMakeLists.txt
test/testmvvm-benchmark/: application_model_benchmark.cpp
test/testmvvm_integration/: all_items_tree_view_tests.cpp  axis_title_controller_tests.cpp  graph_plot_controller_tests.cpp  property_grid_controller_tests.cpp  property_tree_view_tests.cpp  viewmodel_delegate_tests.cpp  viewport_axis_plot_controller_tests.cpp
test/testmvvm_model/: CMakeLists.txt  abstract_command_tests.cpp  compound_item_tests.cpp  insert_item_command_tests.cpp  linked_item_tests.cpp  progress_handler.test.cpp  project_tests.cpp  string_utils_tests.cpp  tagged_items_tests.cpp  treedata_item_converter_tests.cpp  treedata_tagged_items_converter_tests.cpp  treedata_taginfo_converter_tests.cpp  xml_write_utils_tests.cpp
test/testmvvm_view/: CMakeLists.txt  main.cpp
test/testmvvm_viewmodel/: CMakeLists.txt  viewitem_factory_tests.cpp  viewitem_tests.cpp  viewmodel_base_tests.cpp
test/testsup-mvvm-benchmark/: CMakeLists.txt  abstract_viewmodel_controller_benchmark.cpp  all_items_viewmodel_benchmark.cpp  application_model_benchmark.cpp  main.cpp  model_event_handler_benchmark.cpp  model_utils_benchmark.cpp  sessionitem_benchmark.cpp  sessionmodel_benchmark.cpp  unique_id_generator_performance.cpp
test/testsup-mvvm-integration/: CMakeLists.txt  abstract_item_view_tests.cpp  all_items_tree_view_tests.cpp  allint_spinbox_tests.cpp  axis_title_controller_tests.cpp  custom_editor_factories_tests.cpp  custom_plot_test_utils.h  custom_plot_tests_utils_tests.cpp  custom_viewmodel_tests.cpp  data1d_plot_controller_tests.cpp  float_spinbox_tests.cpp  graph_plot_controller_tests.cpp  graph_viewport_plot_controller_tests.cpp  item_selection_model_tests.cpp  item_view_component_provider_tests.cpp  main.cpp  pen_controller_tests.cpp  property_flat_view_tests.cpp  property_grid_controller_tests.cpp  property_tree_view_tests.cpp  top_items_tree_view_tests.cpp  viewmodel_delegate_tests.cpp  viewport_axis_plot_controller_tests.cpp
test/testsup-mvvm-model/: CMakeLists.txt  abstract_command_tests.cpp  abstract_project_tests.cpp  app_project_tests.cpp  application_model_composer_tests.cpp  application_model_tests.cpp  application_model_undo_tests.cpp  attribute_map_tests.cpp  axis_items_tests.cpp  chart_viewport_item_tests.cpp  cloneable_tests.cpp  combo_property_tests.cpp  command_model_composer_tests.cpp  command_stack_corner_tests.cpp  command_stack_macro_tests.cpp  command_stack_tests.cpp  compound_item_tests.cpp  container_item_tests.cpp  container_utils_tests.cpp  data1d_item_tests.cpp  event_handler_tests.cpp  event_types_tests.cpp  event_utils_tests.cpp  exceptions_tests.cpp  external_property_tests.cpp  file_based_project_tests.cpp  file_utils_tests.cpp  folder_based_project_tests.cpp  graph_item_tests.cpp  graph_viewport_item_tests.cpp  insert_item_command_tests.cpp  item_backup_strategy_factory_tests.cpp  item_catalogue_factory_tests.cpp  item_catalogue_tests.cpp  item_connect_helper_tests.cpp  item_connect_tests.cpp  item_connect_utils_tests.cpp  item_controller_tests.cpp  item_copy_strategy_factory_tests.cpp  item_factory_tests.cpp  (+93 more)
test/testsup-mvvm-view/: CMakeLists.txt  abstract_item_view_tests.cpp  abstract_project_user_interactor_tests.cpp  all_items_tree_view_tests.cpp  allint_spinbox_tests.cpp  combo_property_editor_tests.cpp  default_cell_decorator_tests.cpp  default_editor_factory_tests.cpp  float_spinbox_tests.cpp  item_view_component_provider_tests.cpp  main.cpp  property_flat_view_tests.cpp  property_grid_controller_tests.cpp  property_tree_view_tests.cpp  recent_project_path_tests.cpp  role_dependent_editor_factory_tests.cpp  scientific_spinbox_tests.cpp  selectable_combobox_editor_tests.cpp  string_completer_combo_editor_tests.cpp  string_completer_editor_tests.cpp  top_items_tree_view_tests.cpp  variant_dependent_editor_factory_tests.cpp  viewmodel_component_builder_tests.cpp  viewmodel_delegate_extended_tests.cpp  viewmodel_delegate_tests.cpp  widget_utils_tests.cpp
test/testsup-mvvm-viewmodel-app/: CMakeLists.txt  allint_spinbox_tests.cpp  axis_title_controller_tests.cpp  chart_pen_controller_tests.cpp  chart_viewport_controller_tests.cpp  charts_pen_controller_tests.cpp  combo_property_editor_tests.cpp  custom_editor_factories_extended_tests.cpp  custom_editor_factories_tests.cpp  custom_plot_test_utils.h  custom_plot_tests_utils.cpp  custom_plot_tests_utils_tests.cpp  custom_viewmodel_tests.cpp  data1d_plot_controller_tests.cpp  default_editor_factory_tests.cpp  float_spinbox_tests.cpp  graph_plot_controller_tests.cpp  graph_viewport_plot_controller_tests.cpp  item_view_component_provider_tests.cpp  main.cpp  (+7 more)
tests/: .clang-tidy  CMakeLists.txt
(+2032 files in other folders)
